--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": false,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
-	"thumb":"thumbnail_1.jpg",
+	"ownerNumber": "6281779298306",
+	"ownerNumberr": "6281779298306",
+	"cr": "@Shandyone",
+	"ownername": "Shandyone",
+	"botname":"Shandyʙᴏᴛ",
+	"thumb":"thumbnail_1.jpg", 
 	"fakethumb":"thumbnail_1.jpg", 
 	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
 }
