--- a/settings.json
+++ b/settings.json
@@ -14,5 +14,5 @@
 	"botname":"Shandyʙᴏᴛ",
 	"thumb":"thumbnail_1.jpg", 
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @Shandyone"
 }
