--- a/settings.json
+++ b/settings.json
@@ -9,10 +9,10 @@
 	"language":"ind",
 	"ownerNumber": "6285600616877",
 	"ownerNumberr": "6285600616877",
-	"cr": "@Shandyone",
-	"ownername": "Shandyone",
-	"botname":"Shandyʙᴏᴛ",
+	"cr": "@SHANDY JB",
+	"ownername": "SHANDY JB",
+	"botname":"SHANDY BOT",
 	"thumb":"thumbnail_1.jpg", 
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @Shandyone"
+	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @SHANDY JB"
 }
